# NoctisEngine

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDirectXTK.txt  Findassimp.cmake
dependencies/: CMakeLists.txt
dependencies/Assimp/: CMakeLists.txt
dependencies/Assimp/lib/: assimp-vc140-mt.exp
dependencies/DirectXTK/: CMakeLists.txt
dependencies/STBImage/: CMakeLists.txt  stb_image.cpp
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dlls/: Findassimp.cmake
resources/Models/Sponza/: sponza.mtl
resources/Shaders/: BasicPhongPixel.hlsl  BasicPhongVertex.hlsl  FlatPixelShader.hlsl  FlatVertexShader.hlsl  FullScreenGrayscalePixelShader.hlsl  FullScreenNegativePixelShader.hlsl  HdrPixelShader.hlsl  HdrVertexShader.hlsl  LightHelpers.hlsl  Lighting.fx  PBRPixelShader.hlsl  PhongLightingPixelShader.hlsl  PhongLightingVertexShader.hlsl  SkyboxPixelShader.hlsl  SkyboxVertexShader.hlsl
source/: CMakeLists.txt  cmake_install.cmake  winmain.cpp
source/Engine/: App.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssimpModel.cpp  AssimpModel.h  CMakeLists.txt  CameraFPS.cpp  CameraFPS.h  Clock.h  Core_pch.cpp  Core_pch.h  Dx11App.cpp  Dx11App.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Model.cpp  Model.h  NoctisMacros.h  ShapeGenerator.cpp  ShapeGenerator.h  Transform.h  Window.cpp  Window.h
source/ExampleApps/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ExampleApps.sln  ExampleApps.vcxproj  ExampleApps.vcxproj.filters  ExampleDx11App.cpp  ExampleDx11App.h  cmake_install.cmake
source/Math/: CMakeLists.txt  NoctisMath.h  NoctisMatrix.cpp  NoctisMatrix.h  NoctisVector.h
source/Renderer/: CMakeLists.txt  ConstantBufferData.cpp  ConstantBufferData.h  Dx11Buffer.h  Dx11InputLayout.cpp  Dx11RenderDevice.cpp  Dx11RenderDevice.h  Dx11Sampler.h  Dx11Shader.h  Dx11Texture.cpp  Dx11Texture.h  Dx11Texture.tpp  Dx11Utils.h  GLShader.h  InputLayout.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Noctis3DTypes.h  NoctisBuffer.h  NoctisBuffers.h  NoctisConstantBuffer.h  NoctisCubeMap.cpp  NoctisCubeMap.h  NoctisDx11RenderDevice.cpp  NoctisDx11RenderDevice.h  NoctisPipelinePass.h  NoctisRenderDevice.cpp  NoctisRenderDevice.h  NoctisRenderable.h  NoctisSampler.h  NoctisShader.cpp  NoctisShader.h  NoctisTexture.cpp  NoctisTexture.h  (+5 more)
